[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reti"
description = "reti"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Elliott Macneil", email = "ucabem1@ucl.ac.uk"}]
dependencies = [
    "python-chess",
    "ruff", 
    "pre-commit",
    ]


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
filterwarnings = "ignore"
